[package]
name = "unixtime"
version = "0.1.0"
authors = ["Maximilian Schönenberg <max.schoenenberg@me.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/schoenenberg/unixtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"

[profile.release]
lto = "fat"
debug = 0
opt-level = 3
