[package]
name = "unixtime"
version = "0.1.1"
authors = ["Maximilian Schönenberg <max.schoenenberg@me.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/schoenenberg/unixtime"
description = "A small utility to print the current unix-time on STDOUT."
keywords = ["utility", "tool", "unixtime", "time", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2"

[profile.release]
lto = "fat"
debug = 0
opt-level = 3
