[package]
name = "unixtime"
version = "0.2.1"
authors = ["Maximilian Schönenberg <schoenenberg@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/schoenenberg/unixtime"
description = "A small utility for working with UNIX time."
keywords = ["utility", "tool", "unixtime", "time", "cli"]
categories = ["command-line-interface", "command-line-utilities", "date-and-time"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "2", features = ["suggestions", "wrap_help"] }

[profile.release]
lto = "fat"
debug = 0
opt-level = 3
